# college

./: .gitignore
.claude/: settings.local.json
fall-2019/cs1a/: .gitignore
fall-2019/cs1a/AverageOfDoubles/: hw01.cpp
fall-2019/cs1a/CirclesArea/: Makefile.txt
fall-2019/cs1a/DrawingShapes/: hw04.cpp
fall-2022/: .gitignore
fall-2022/cs1c/: README.md
fall-2022/cs1c/sam/: CreditCardType.g  CreditCardType.k  main.cpp
fall-2023/cs30a/extra-credit-1/: affine_cipher.py  egcd.py  prime_fib.py
fall-2025/cecs-342/generic-sort/: sort.c  sort.cpp  sort.cs  sort.hs  tools.txt
fall-2025/cecs-342/haskell/: Main.hi
fall-2025/cecs-342/merge-sort/: main.c  main.hs  merge_sort.c  output.txt
fall-2025/cecs-342/midterm/: expressions.hs
fall-2025/cecs-342/prolog/: main.pl
fall-2025/cecs-342/quick-sort/: Main.hs  fast_sort.c  fast_sort.h  main.c  output.txt
fall-2025/cecs-378/final-project/: bad.js  index.py  task-1.html  task-2.html  task-3.html  task-4.html
spring-2022/cs1b/: .gitattributes  .gitignore  Template.cpp
spring-2022/cs1b/Assignments/Linked Lists/: CMakeLists.txt  output.txt  screenIO.txt
spring-2022/cs1b/Assignments/Linked Lists/include/: header.h
spring-2022/cs1b/Assignments/Linked Lists/src/: deallocate.cpp  dispMenu.cpp  heading.cpp  main.cpp  multiMoviePrint.cpp  printSingleMovie.cpp  readInput.cpp  searchLogic.cpp  subString.cpp  switchOption.cpp  validateInput.cpp
spring-2022/cs1b/Assignments/RecursionPerformance/: CMakeLists.txt  final.cpp
spring-2022/cs1b/Assignments/RecursionPerformance/include/: header.h
spring-2022/cs1b/Assignments/RecursionPerformance/src/: main.cpp
spring-2022/cs1b/Assignments/RecursionPerformance/src/handlers/: factorial.cpp  factorialPerformance.cpp  fibonacci.cpp  fibonacciPerformance.cpp  switchLoop.cpp  validation.cpp
spring-2022/cs1b/Assignments/RecursionPerformance/src/print/: heading.cpp  menu.cpp
spring-2022/cs1b/Labs/ArrayOfSheeps/: CMakeLists.txt  final.cpp  screenIO.txt
spring-2022/cs1b/Labs/ArrayOfSheeps/include/: Sheep.h  SheepLinkedList.h  SheepList.h  header.h
spring-2022/cs1b/Labs/ArrayOfSheeps/src/: Sheep.cpp  SheepLinkedList.cpp  SheepList.cpp  main.cpp
spring-2022/cs1b/Labs/ArrayOfSheeps/src/handlers/: headerClass.cpp  menu.cpp  validateInt.cpp
spring-2022/cs1b/Labs/CoinFilp/: CMakeLists.txt  screenIO.txt
spring-2022/cs1b/Labs/CoinFilp/include/: main.hpp
spring-2022/cs1b/Labs/CoinFilp/src/: averageLogic.cpp  coinFlip.cpp  heading.cpp  main.cpp  outputResults.cpp  userInformation.cpp
spring-2022/cs1b/Labs/CreatingOrderedList/: CMakeLists.txt  final.cpp  screenIO.txt
spring-2022/cs1b/Labs/CreatingOrderedList/include/: header.h
spring-2022/cs1b/Labs/CreatingOrderedList/src/: main.cpp
spring-2022/cs1b/Labs/CreatingOrderedList/src/handlers/: clearList.cpp  handleDisplayList.cpp  handleNodePlacement.cpp  handleSwitch.cpp  isListEmpty.cpp  removeNode.cpp  searchName.cpp  validateInput.cpp
spring-2022/cs1b/Labs/CreatingOrderedList/src/helpers/: displayHeader.cpp  displayMenu.cpp  heading.cpp  insertNode.cpp  placeNodeBack.cpp  placeNodeFront.cpp  readInput.cpp
spring-2022/cs1b/Labs/CreatingOrderedList/src/memory/: createList.cpp
spring-2022/cs1b/Labs/DoublyLinkedList/: CMakeLists.txt  final.cc
spring-2022/cs1b/Labs/DoublyLinkedList/include/: header.h
spring-2022/cs1b/Labs/DoublyLinkedList/src/: main.cc
spring-2022/cs1b/Labs/DoublyLinkedList/src/handlers/: displayList.cc  nodePlacement.cc  removeNode.cc  validateInput.cc
spring-2022/cs1b/Labs/DoublyLinkedList/src/helpers/: displayHeader.cc  displayMenu.cc  insertNode.cc  placeNodeBack.cc  placeNodeFront.cc  readInput.cc
spring-2022/cs1b/Labs/DoublyLinkedList/src/memory/: createList.cc
spring-2022/cs1b/Labs/ImplementingQueue/: CMakeLists.txt  final.cpp  screenIO.txt
spring-2022/cs1b/Labs/ImplementingQueue/include/: header.h
spring-2022/cs1b/Labs/ImplementingQueue/src/: clearQueue.cpp  deallocate.cpp  displayMenu.cpp  front.cpp  heading.cpp  main.cpp  push&pop.cpp  switchCase.cpp  validateInput.cpp
spring-2022/cs1b/Labs/IntroOOP/: CMakeLists.txt  final.cpp
spring-2022/cs1b/Labs/IntroOOP/include/: Animal.h  header.h
spring-2022/cs1b/Labs/IntroOOP/src/: main.cpp
spring-2022/cs1b/Labs/IntroOOP/src/handlers/: classHeading.cpp  printMenu.cpp  printSetMenu.cpp  switchLoop.cpp  validateBounds.cpp  validation.cpp
spring-2022/cs1b/Labs/IntroOOP/src/namespaces/: Animal.cpp
spring-2022/cs1b/Labs/LinkedList/: CMakeLists.txt  final.cpp  screenIO.txt
spring-2022/cs1b/Labs/LinkedList/include/: header.h  studentNode.h
spring-2022/cs1b/Labs/LinkedList/src/: average.cpp  dispList.cpp  heading.cpp  main.cpp  pop.cpp  readData.cpp  search.cpp
spring-2022/cs1b/Labs/Structs/: CMakeLists.txt  screenIO.txt
spring-2022/cs1b/Labs/Structs/src/: balanceIndex.cpp  handleOutput.cpp  handleSearchOutput.cpp  main.cpp  main.hpp  readFile.cpp  searchName.cpp  sumofBalances.cpp
spring-2022/cs1b/Labs/Testing/: CMakeLists.txt  screenIO.txt
spring-2022/cs1b/Labs/Testing/include/: main.h
spring-2022/cs1b/Labs/Testing/src/: handleCalc.cpp  handleInput.cpp  handleOutput.cpp  heading.cpp  main.cpp
spring-2025/cecs-323/: clos.xlsx  hw1.drawio  hw2.drawio  hw4.drawio  odm-hw.drawio  orm-hw.drawio  practice-db.dmm
spring-2026/cecs-475/: .gitignore
spring-2026/notes/: .cursorrules
summer-2026/cecs-453/: .gitignore
(+638 files in other folders)
